# ticketVendingMachine

./: CMakeLists.txt  Readme.md
doc/: Requirements.rst  User scenarios.rst
include/Printer/: IPrinter.hpp  PrinterConsole.hpp
include/TicketVendingMachine/: VendingMachine.hpp
include/TicketVendingMachine/Currencies/: CurrencyPln.hpp  DenominationPln.hpp  ICurrency.hpp
include/TicketVendingMachine/Ticket/: Ticket.hpp
include/TicketVendingMachine/Zone/: Zone.hpp
include/User/: Admin.hpp  Client.hpp
include/Utilities/: ExceptionHandler.hpp  Logger.hpp
src/: CMakeLists.txt  main.cpp
src/Printer/: PrinterConsole.cpp
src/TicketVendingMachine/: VendingMachine.cpp
src/TicketVendingMachine/Currencies/: CurrencyPln.cpp
src/TicketVendingMachine/Ticket/: Ticket.cpp
src/TicketVendingMachine/Zone/: Zone.cpp
src/User/: Admin.cpp  Client.cpp
src/Utilities/: ExceptionHandler.cpp  Logger.cpp
test/ut/: CMakeLists.txt
test/ut/tests/TicketVendingMachine/: Mocks.hpp  VendingMachineTests.cpp
test/ut/tests/TicketVendingMachine/Zone/: ZoneTests.cpp
